# Gazebo_ws

devel/: .catkin  .rosinstall  setup.sh
devel/lib/pkgconfig/: auv_sim.pc  gazebo_tutorials.pc  sim_plugins.pc
devel/share/auv_sim/cmake/: auv_simConfig.cmake
devel/share/gazebo_tutorials/cmake/: gazebo_tutorialsConfig.cmake
devel/share/sim_plugins/cmake/: sim_pluginsConfig.cmake
src/auv_sim/: CMakeLists.txt  package.xml
src/auv_sim/launch/: torpedo_gazebo.launch  torpedo_rviz.launch
src/auv_sim/math_notes/: MOI_Scaled.txt  Moment of inertia generated by solidworks.txt
src/auv_sim/meshes/: fin.dae  tail.dae  torpedo.dae
src/auv_sim/urdf/: test.gazebo  test.urdf  torpedo.urdf
src/auv_sim/worlds/: torpedo.world
src/sim_plugins/: CMakeLists.txt  package.xml
src/sim_plugins/launch/: hello.launch
src/sim_plugins/src/: BuoyancyPlugin.cpp  model_push.cpp
src/sim_plugins/urdf/: box.gazebo  box.urdf
src/sim_plugins/worlds/: hello.world
